--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
     letter-spacing: .1em;
 }
 
-/* & This will styles the entire webpage */
+/* & This will style the entire webpage */
 body {
     /* ~ Colors inspired by my VS Code Theme */
     background-color: #393a55;
